*rider-2020.2.2
::prototype99	rewrite certain parts
::rindeal		base ebuild