@@ -5,6 +5,7 @@ DIST JetBrains.Rider-2020.2.2.tar.gz 829064824 BLAKE2B 8266c301db5fadfd0c335278f
 EBUILD rider-2018.2.3.ebuild 842 BLAKE2B d69875dd733ad7c70f5e51dae4662b0d43d48d0cb8f6875c4ea845cb068113b68b568c06cbb1cea76fa383ae20c3c9f0e7be4dcd4063f7bfe573a9ac7fd616a8 SHA512 14a84a709f8b91d1ab9aa6df130b7ddf47db690ec86cf61815ac2113df1dbaf69c7d55288028140e430537e4743c607b388c4f0f4d911788e930a94640cb429a
 EBUILD rider-2019.1.3.ebuild 842 BLAKE2B d69875dd733ad7c70f5e51dae4662b0d43d48d0cb8f6875c4ea845cb068113b68b568c06cbb1cea76fa383ae20c3c9f0e7be4dcd4063f7bfe573a9ac7fd616a8 SHA512 14a84a709f8b91d1ab9aa6df130b7ddf47db690ec86cf61815ac2113df1dbaf69c7d55288028140e430537e4743c607b388c4f0f4d911788e930a94640cb429a
 EBUILD rider-2019.2.3.ebuild 842 BLAKE2B d69875dd733ad7c70f5e51dae4662b0d43d48d0cb8f6875c4ea845cb068113b68b568c06cbb1cea76fa383ae20c3c9f0e7be4dcd4063f7bfe573a9ac7fd616a8 SHA512 14a84a709f8b91d1ab9aa6df130b7ddf47db690ec86cf61815ac2113df1dbaf69c7d55288028140e430537e4743c607b388c4f0f4d911788e930a94640cb429a
+EBUILD rider-2020.2.2-r1.ebuild 797 BLAKE2B 4dfac988c6dccc30a4badc61a7162f489e3f77a4a4c6887a955b61eb0756dfc6dc6ef86271cc07933054868a35574c8d978f73ba1115f35d0a6f8840ceb360f4 SHA512 c9f0549c62da4a573edf9c8dd91ae6ae82b86e2e2eafc538936b0ea47e6eafd42010a0b259bf1559ea5d5cbaea9904f479e96bb107701a9ebf174aa19a10760d
 EBUILD rider-2020.2.2.ebuild 682 BLAKE2B 00f39569ec185b825032abebe7f7f12bbc6a661667154cdf6697fae9a747415fb12d5a141ee89f1ab085f646724006d9ac5076b5340788e0f8dba20d2bf31a9d SHA512 73a3868060f975dba5f89b4106711a90943fb9c5e2043bb071933ebca59a877671941b23dfd295b7f56bc04d12cd4dd7d9eb01badb1a5f7291019fcd00699d63
-MISC ChangeLog 74 BLAKE2B dabd3e924aa281fe15f7fddf0b4092e2c5ed8e191f38cef66972c4ef5304f5f4bec91e80eb51b2c0ed62c36804b72b2b969fd405173a1cc227a6e619e81ccb52 SHA512 a34c5d67ef759a7c3f0305b8a7e9e7d3a5264dd585ff14b21cd319c94a25e1d364253e59e41f4eb83a7fdec363af9cf5675efe810c113e8569c74dd38571ca85
-MISC metadata.xml 274 BLAKE2B 5fbffc6007cab8840d4fd6e79ce047c56e8c5d79006572d5e66c2d9bd178b137e07509a539ceb40213d43740834fb5d7d274e3aec7567da9e5e3873faa6cdebe SHA512 88e98caa1b4cb05620130e5252bfdf1f4ed6459ce55eab9f9af1fd09b0e7abff651b3e65c29892266859135c8f2f30e8aa7c9eaf20c9a43323be2e326a7fcf3d
+MISC ChangeLog 362 BLAKE2B 3aa04626dfc6f77e2918b16079840812ea7f9e25c4187c710fc83557893e7b6c3db58d2484ef5b1cbec41104fcc79297845ac04a50e5cdfa1e91f2c3a01fc0d3 SHA512 51d09fe2c424b0b433cc09045508cd8ba748ee4a5b6b8c646ed986321e1ec07cf9f896ca7d5545f1c3b0bcb163b329d061367341239804fbfd1a00a775de6b2e
+MISC metadata.xml 355 BLAKE2B 4417453e121caa89335391cb93ec970c11742c75f3b27e42c6a44a3a63ecddb3c9564e548951cbeba6b3e3b92e3c28aca42809ff0ea87ee2347813806afebe65 SHA512 e7f50a72df33c1a880ce33a26ea0ed8e26655c0acdc8d3b5ba33c3d2abb3afd1fab87734e2c9c98e5702a54ba7d2e92271c19a066f06372fab0b1b3362fabcc6
