@@ -2,7 +2,10 @@
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
   <maintainer type="person">
-    <email>dev.rindeal+ebuild-repo@gmail.com</email>
-    <name>Jan Chren (rindeal)</name>
+    <email>sophietheopossum@yandex.ru</email>
+    <name>Seirra Blake</name>
   </maintainer>
+    <use>
+    <flag name="mono">Include mono, needed for regular .net and guis</flag>
+  </use>
 </pkgmetadata>
